--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
 body {
     text-align: center;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    padding: 0;
+    color: #024b47;
+    background-color: #c8cfcf;
+    font-weight: 400;
 }
+
+ion-icon {
+    font-size: 50px;
+    color: #5f0707
+  }
+
+  dialog {
+      width: 400px;
+      height: 400px;
+      
+  }
